// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Atoms/Badge default 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <span
    className="ui-badge ui-badge--default ui-badge--medium"
  >
    5
  </span>
</div>
`;

exports[`Storyshots Components/Atoms/Badge info 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <span
    className="ui-badge ui-badge--default ui-badge--medium"
  >
    0
  </span>
</div>
`;

exports[`Storyshots Components/Atoms/Badge render as a different element 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <a
    className="ui-badge ui-badge--default ui-badge--medium"
    onClick={[Function]}
  >
    5
  </a>
</div>
`;

exports[`Storyshots Components/Atoms/Badge with kind modifer 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <span
    className="ui-badge ui-badge--danger ui-badge--medium"
  >
    5
  </span>
</div>
`;

exports[`Storyshots Components/Atoms/Badge with long text 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <span
    className="ui-badge ui-badge--default ui-badge--medium"
  >
    1000
  </span>
</div>
`;

exports[`Storyshots Components/Atoms/Badge with size modifier 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <span
    className="ui-badge ui-badge--default ui-badge--large"
  >
    5
  </span>
</div>
`;

exports[`Storyshots Components/Atoms/Button default 1`] = `
<button
  className="ui-button ui-button--medium ui-button--default"
  onClick={[Function]}
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Button info 1`] = `
<button
  className="ui-button ui-button--small ui-button--primary"
  onClick={[Function]}
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Button render as a different element 1`] = `
<a
  className="ui-button ui-button--medium ui-button--default"
  onClick={[Function]}
>
  Call to action
</a>
`;

exports[`Storyshots Components/Atoms/Button with clear modifier 1`] = `
<button
  className="ui-button ui-button--medium ui-button--clear ui-button--clear--default"
  onClick={[Function]}
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Button with custom content 1`] = `
<button
  className="ui-button ui-button--medium ui-button--default"
  onClick={[Function]}
>
  <em
    className="custom ui-button__content ui-button__content--medium"
    size="medium"
  >
    Call
  </em>
  <span
    className="ui-button__content ui-button__content--medium"
  >
    to action
  </span>
</button>
`;

exports[`Storyshots Components/Atoms/Button with custom css-module class names 1`] = `
<button
  className="root medium default"
  onClick={[Function]}
>
  <i
    className="ui-icon content content--medium ui-icon--medium"
  >
    backup
  </i>
  <span
    className="content content--medium"
  >
    Call to action
  </span>
</button>
`;

exports[`Storyshots Components/Atoms/Button with different icon size 1`] = `
<button
  className="ui-button ui-button--medium ui-button--default"
  onClick={[Function]}
>
  <i
    className="ui-icon ui-button__content ui-button__content--medium ui-icon--large"
  >
    backup
  </i>
  <span
    className="ui-button__content ui-button__content--medium"
  >
    Call to action
  </span>
</button>
`;

exports[`Storyshots Components/Atoms/Button with imported css-module class names 1`] = `
<button
  className="root medium default"
  onClick={[Function]}
>
  <i
    className="ui-icon content content--medium ui-icon--medium"
  >
    backup
  </i>
  <span
    className="content content--medium"
  >
    Call to action
  </span>
</button>
`;

exports[`Storyshots Components/Atoms/Button with inline modifier 1`] = `
<button
  className="ui-button ui-button--medium ui-button--inline ui-button--inline--default ui-button--clear ui-button--clear--default"
  onClick={[Function]}
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Button with kind modifer 1`] = `
<button
  className="ui-button ui-button--medium ui-button--danger"
  onClick={[Function]}
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Button with kind size modifier 1`] = `
<button
  className="ui-button ui-button--large ui-button--default"
  onClick={[Function]}
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Button with left icon 1`] = `
<button
  className="ui-button ui-button--medium ui-button--default"
  onClick={[Function]}
>
  <i
    className="ui-icon ui-button__content ui-button__content--medium ui-icon--medium"
  >
    backup
  </i>
  <span
    className="ui-button__content ui-button__content--medium"
  >
    Call to action
  </span>
</button>
`;

exports[`Storyshots Components/Atoms/Button with null children 1`] = `
<button
  className="ui-button ui-button--medium ui-button--default"
  onClick={[Function]}
>
  <i
    className="ui-icon ui-button__content ui-button__content--medium ui-icon--large"
  >
    backup
  </i>
</button>
`;

exports[`Storyshots Components/Atoms/Button with outline kind modifer 1`] = `
<button
  className="ui-button ui-button--medium ui-button--outline ui-button--outline--danger ui-button--outline--medium"
  onClick={[Function]}
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Button with outline modifer 1`] = `
<button
  className="ui-button ui-button--medium ui-button--outline ui-button--outline--default ui-button--outline--medium"
  onClick={[Function]}
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Button with outline size modifer 1`] = `
<button
  className="ui-button ui-button--large ui-button--outline ui-button--outline--default ui-button--outline--large"
  onClick={[Function]}
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Icon default 1`] = `
<i
  className="ui-icon ui-icon--medium"
>
  face
</i>
`;

exports[`Storyshots Components/Atoms/Icon info 1`] = `
<i
  className="ui-icon ui-icon--large"
>
  home
</i>
`;

exports[`Storyshots Components/Atoms/Icon with custom css-module class names 1`] = `
<i
  className="root medium"
>
  face
</i>
`;

exports[`Storyshots Components/Atoms/Icon with imported css-module class names 1`] = `
<i
  className="root medium"
>
  face
</i>
`;

exports[`Storyshots Components/Atoms/Icon with size modifier 1`] = `
<i
  className="ui-icon ui-icon--large"
>
  face
</i>
`;

exports[`Storyshots Components/Atoms/Input default 1`] = `
<input
  className="ui-input ui-input--medium"
  onChange={[Function]}
  placeholder="Enter text here"
/>
`;

exports[`Storyshots Components/Atoms/Input info 1`] = `
<input
  className="ui-input ui-input--large"
  onChange={[Function]}
  placeholder="Enter text here"
/>
`;

exports[`Storyshots Components/Atoms/Input with custom css-module class names 1`] = `
<input
  className="root medium"
  onChange={[Function]}
  placeholder="Enter text here"
/>
`;

exports[`Storyshots Components/Atoms/Input with imported css-module class names 1`] = `
<input
  className="root medium"
  onChange={[Function]}
  placeholder="Enter text here"
/>
`;

exports[`Storyshots Components/Atoms/Input with invalid state 1`] = `
<input
  className="ui-input ui-input--medium ui-input--invalid"
  onChange={[Function]}
  placeholder="Enter text here"
/>
`;

exports[`Storyshots Components/Atoms/Input with size modifier 1`] = `
<input
  className="ui-input ui-input--large"
  onChange={[Function]}
  placeholder="Enter text here"
/>
`;

exports[`Storyshots Components/Atoms/Input with valid state 1`] = `
<input
  className="ui-input ui-input--medium ui-input--valid"
  onChange={[Function]}
  placeholder="Enter text here"
/>
`;

exports[`Storyshots Components/Atoms/Label default 1`] = `
<label
  className="ui-label ui-label--medium"
>
  Username
</label>
`;

exports[`Storyshots Components/Atoms/Label info 1`] = `
<label
  className="ui-label ui-label--large"
>
  Username
</label>
`;

exports[`Storyshots Components/Atoms/Label with custom css-module class names 1`] = `
<label
  className="root medium"
>
  Username
</label>
`;

exports[`Storyshots Components/Atoms/Label with imported css-module class names 1`] = `
<label
  className="root medium"
>
  Username
</label>
`;

exports[`Storyshots Components/Atoms/Label with size modifier 1`] = `
<label
  className="ui-label ui-label--large"
>
  Username
</label>
`;

exports[`Storyshots Components/Atoms/Select default 1`] = `
<select
  className="ui-select ui-select--medium"
  onChange={[Function]}
>
  <option
    value="Option A"
  >
    Option A
  </option>
  <option
    value="Option B"
  >
    Option B
  </option>
  <option
    value="Option C"
  >
    Option C
  </option>
</select>
`;

exports[`Storyshots Components/Atoms/Select info 1`] = `
<select
  className="ui-select ui-select--small"
  onChange={[Function]}
>
  <option
    value="Option A"
  >
    Option A
  </option>
  <option
    value="Option B"
  >
    Option B
  </option>
  <option
    value="Option C"
  >
    Option C
  </option>
</select>
`;

exports[`Storyshots Components/Atoms/Select with children 1`] = `
<select
  className="ui-select ui-select--medium"
  onChange={[Function]}
>
  <optgroup
    label="Group A"
  >
    <option
      value="a1"
    >
      Option 1
    </option>
    <option
      value="a2"
    >
      Option 2
    </option>
    <option
      value="a3"
    >
      Option 3
    </option>
  </optgroup>
  <optgroup
    label="Group b"
  >
    <option
      value="b1"
    >
      Option 1
    </option>
    <option
      value="b2"
    >
      Option 2
    </option>
    <option
      value="b3"
    >
      Option 3
    </option>
  </optgroup>
</select>
`;

exports[`Storyshots Components/Atoms/Select with custom css-module class names 1`] = `
<select
  className="root medium"
  onChange={[Function]}
>
  <option
    value="Option A"
  >
    Option A
  </option>
  <option
    value="Option B"
  >
    Option B
  </option>
  <option
    value="Option C"
  >
    Option C
  </option>
</select>
`;

exports[`Storyshots Components/Atoms/Select with imported css-module class names 1`] = `
<select
  className="root medium"
  onChange={[Function]}
>
  <option
    value="Option A"
  >
    Option A
  </option>
  <option
    value="Option B"
  >
    Option B
  </option>
  <option
    value="Option C"
  >
    Option C
  </option>
</select>
`;

exports[`Storyshots Components/Atoms/Select with invalid state 1`] = `
<select
  className="ui-select ui-select--medium ui-select--invalid"
  onChange={[Function]}
>
  <option
    value="Option A"
  >
    Option A
  </option>
  <option
    value="Option B"
  >
    Option B
  </option>
  <option
    value="Option C"
  >
    Option C
  </option>
</select>
`;

exports[`Storyshots Components/Atoms/Select with options attributes 1`] = `
<select
  className="ui-select ui-select--medium"
  defaultValue={1}
  onChange={[Function]}
>
  <option
    value={0}
  >
    Option A
  </option>
  <option
    value={1}
  >
    Option B
  </option>
  <option
    value={2}
  >
    Option C
  </option>
</select>
`;

exports[`Storyshots Components/Atoms/Select with size modifier 1`] = `
<select
  className="ui-select ui-select--large"
  onChange={[Function]}
>
  <option
    value="Option A"
  >
    Option A
  </option>
  <option
    value="Option B"
  >
    Option B
  </option>
  <option
    value="Option C"
  >
    Option C
  </option>
</select>
`;

exports[`Storyshots Components/Atoms/Select with valid state 1`] = `
<select
  className="ui-select ui-select--medium ui-select--valid"
  onChange={[Function]}
>
  <option
    value="Option A"
  >
    Option A
  </option>
  <option
    value="Option B"
  >
    Option B
  </option>
  <option
    value="Option C"
  >
    Option C
  </option>
</select>
`;

exports[`Storyshots Components/Atoms/Spinner default 1`] = `
<span
  className="ui-spinner ui-spinner--medium"
/>
`;

exports[`Storyshots Components/Atoms/Spinner info 1`] = `
<span
  className="ui-spinner ui-spinner--small"
/>
`;

exports[`Storyshots Components/Atoms/Spinner with custom css-module class names 1`] = `
<span
  className="root medium"
/>
`;

exports[`Storyshots Components/Atoms/Spinner with imported css-module class names 1`] = `
<span
  className="root medium"
/>
`;

exports[`Storyshots Components/Atoms/Spinner with size modifier 1`] = `
<span
  className="ui-spinner ui-spinner--large"
/>
`;

exports[`Storyshots Components/Atoms/Tag default 1`] = `
<span
  className="ui-tag ui-tag--default ui-tag--medium"
>
  Tag A
</span>
`;

exports[`Storyshots Components/Atoms/Tag info 1`] = `
<span
  className="ui-tag ui-tag--primary ui-tag--small"
>
  Tag A
</span>
`;

exports[`Storyshots Components/Atoms/Tag render as a different element 1`] = `
<a
  className="ui-tag ui-tag--default ui-tag--medium"
  onClick={[Function]}
>
  Tag A
</a>
`;

exports[`Storyshots Components/Atoms/Tag with kind modifer 1`] = `
<span
  className="ui-tag ui-tag--danger ui-tag--medium"
>
  Tag A
</span>
`;

exports[`Storyshots Components/Atoms/Tag with size modifier 1`] = `
<span
  className="ui-tag ui-tag--default ui-tag--large"
>
  Tag A
</span>
`;

exports[`Storyshots Components/Atoms/Textarea default 1`] = `
<textarea
  className="ui-textarea ui-textarea--medium"
  onChange={[Function]}
  placeholder="Enter text here"
/>
`;

exports[`Storyshots Components/Atoms/Textarea info 1`] = `
<textarea
  className="ui-textarea ui-textarea--small"
  onChange={[Function]}
  placeholder="Enter text here"
/>
`;

exports[`Storyshots Components/Atoms/Textarea with custom css-module class names 1`] = `
<textarea
  className="root medium"
  onChange={[Function]}
  placeholder="Enter text here"
/>
`;

exports[`Storyshots Components/Atoms/Textarea with imported css-module class names 1`] = `
<textarea
  className="root medium"
  onChange={[Function]}
  placeholder="Enter text here"
/>
`;

exports[`Storyshots Components/Atoms/Textarea with invalid state 1`] = `
<textarea
  className="ui-textarea ui-textarea--medium ui-textarea--invalid"
  onChange={[Function]}
  placeholder="Enter text here"
/>
`;

exports[`Storyshots Components/Atoms/Textarea with size modifier 1`] = `
<textarea
  className="ui-textarea ui-textarea--large"
  onChange={[Function]}
  placeholder="Enter text here"
/>
`;

exports[`Storyshots Components/Atoms/Textarea with valid state 1`] = `
<textarea
  className="ui-textarea ui-textarea--medium ui-textarea--valid"
  onChange={[Function]}
  placeholder="Enter text here"
/>
`;

exports[`Storyshots Components/Molecules/ButtonIcon default 1`] = `
<button
  className="ui-button-icon ui-button-icon--medium ui-button-icon--default"
  name="face"
  onClick={[Function]}
>
  <i
    className="ui-icon ui-icon--medium"
  >
    face
  </i>
</button>
`;

exports[`Storyshots Components/Molecules/ButtonIcon info 1`] = `
<button
  className="ui-button-icon ui-button-icon--large ui-button-icon--primary"
  name="home"
  onClick={[Function]}
>
  <i
    className="ui-icon ui-icon--large"
  >
    home
  </i>
</button>
`;

exports[`Storyshots Components/Molecules/ButtonIcon with custom css-module class names 1`] = `
<button
  className="root medium default"
  name="backup"
  onClick={[Function]}
>
  <i
    className="ui-icon ui-icon--medium"
  >
    backup
  </i>
</button>
`;

exports[`Storyshots Components/Molecules/ButtonIcon with icon name 1`] = `
<button
  className="ui-button-icon ui-button-icon--large ui-button-icon--default"
  name="backup"
  onClick={[Function]}
>
  <i
    className="ui-icon ui-icon--large"
  >
    backup
  </i>
</button>
`;

exports[`Storyshots Components/Molecules/ButtonIcon with imported css-module class names 1`] = `
<button
  className="root medium default"
  name="backup"
  onClick={[Function]}
>
  <i
    className="ui-icon ui-icon--medium"
  >
    backup
  </i>
</button>
`;

exports[`Storyshots Components/Molecules/ButtonIcon with kind modifier 1`] = `
<button
  className="ui-button-icon ui-button-icon--medium ui-button-icon--danger"
  name="face"
  onClick={[Function]}
>
  <i
    className="ui-icon ui-icon--medium"
  >
    face
  </i>
</button>
`;

exports[`Storyshots Components/Molecules/ButtonIcon with render prop 1`] = `
<button
  className="ui-button-icon ui-button-icon--medium ui-button-icon--default"
  name="backup"
  onClick={[Function]}
>
  <span>
    backup / medium
  </span>
</button>
`;

exports[`Storyshots Components/Molecules/ButtonIcon with size modifier 1`] = `
<button
  className="ui-button-icon ui-button-icon--large ui-button-icon--default"
  name="face"
  onClick={[Function]}
>
  <i
    className="ui-icon ui-icon--large"
  >
    face
  </i>
</button>
`;

exports[`Storyshots Components/Molecules/ListGroup default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <ul
    className="ui-list-group ui-list-group--medium"
  >
    <li
      className="ui-list-group__item"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </li>
    <li
      className="ui-list-group__item"
    >
      Proin at efficitur est.
    </li>
    <li
      className="ui-list-group__item"
    >
      Nunc vitae consectetur nibh, at maximus risus.
    </li>
    <li
      className="ui-list-group__item"
    >
      Sed sit amet metus id ex fringilla hendrerit non sit amet mauris.
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/Molecules/ListGroup info 1`] = `
<ul
  className="ui-list-group ui-list-group--small"
>
  <li
    className="ui-list-group__item"
  >
    Item 1
  </li>
  <li
    className="ui-list-group__item"
  >
    Item 2
  </li>
</ul>
`;

exports[`Storyshots Components/Molecules/ListGroup with custom css-module class names 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <ul
    className="root medium"
  >
    <li
      className="item"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </li>
    <li
      className="item"
    >
      Proin at efficitur est.
    </li>
    <li
      className="item"
    >
      Nunc vitae consectetur nibh, at maximus risus.
    </li>
    <li
      className="item"
    >
      Sed sit amet metus id ex fringilla hendrerit non sit amet mauris.
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/Molecules/ListGroup with custom render 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <nav
    className="ui-list-group ui-list-group--medium"
  >
    <a
      className="ui-list-group__item"
      href="#0"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </a>
    <a
      className="ui-list-group__item"
      href="#1"
    >
      Proin at efficitur est.
    </a>
    <a
      className="ui-list-group__item"
      href="#2"
    >
      Nunc vitae consectetur nibh, at maximus risus.
    </a>
    <a
      className="ui-list-group__item"
      href="#3"
    >
      Sed sit amet metus id ex fringilla hendrerit non sit amet mauris.
    </a>
  </nav>
</div>
`;

exports[`Storyshots Components/Molecules/ListGroup with imported css-module class names 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <ul
    className="root medium"
  >
    <li
      className="item"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </li>
    <li
      className="item"
    >
      Proin at efficitur est.
    </li>
    <li
      className="item"
    >
      Nunc vitae consectetur nibh, at maximus risus.
    </li>
    <li
      className="item"
    >
      Sed sit amet metus id ex fringilla hendrerit non sit amet mauris.
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/Molecules/ListGroup with size modifier 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <ul
    className="ui-list-group ui-list-group--large"
  >
    <li
      className="ui-list-group__item"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </li>
    <li
      className="ui-list-group__item"
    >
      Proin at efficitur est.
    </li>
    <li
      className="ui-list-group__item"
    >
      Nunc vitae consectetur nibh, at maximus risus.
    </li>
    <li
      className="ui-list-group__item"
    >
      Sed sit amet metus id ex fringilla hendrerit non sit amet mauris.
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/Organisms/Dropdown default 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <p>
    Dropdown anchor
  </p>
  <div
    className="ui-dropdown"
  >
    <p>
      Content dropdown
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Organisms/Dropdown info 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <p>
    Dropdown anchor
  </p>
  <div
    className="ui-dropdown"
  >
    <p>
      Content dropdown
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Organisms/Dropdown with custom css-module class names 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <p>
    Dropdown anchor
  </p>
  <div
    className="root"
  >
    <p>
      Content dropdown
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Organisms/Dropdown with imported css-module class names 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <p>
    Dropdown anchor
  </p>
  <div
    className="root"
  >
    <p>
      Content dropdown
    </p>
  </div>
</div>
`;

exports[`Storyshots Examples/Contact Form default 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "380px",
      "padding": "1rem",
    }
  }
>
  <form
    className="contact-form"
    onSubmit={[Function]}
  >
    <div
      className="contact-form__field"
    >
      <label
        className="ui-label contact-form__field__label ui-label--medium"
      >
        First name
      </label>
      <input
        className="ui-input ui-input--medium"
        name="firstname"
        placeholder="First name"
      />
    </div>
    <div
      className="contact-form__field"
    >
      <label
        className="ui-label contact-form__field__label ui-label--medium"
      >
        Last name
      </label>
      <input
        className="ui-input ui-input--medium"
        name="lastname"
        placeholder="Last name"
      />
    </div>
    <div
      className="contact-form__field"
    >
      <label
        className="ui-label contact-form__field__label ui-label--medium"
      >
        Country
      </label>
      <select
        className="ui-select ui-select--medium"
        name="country"
      >
        <option
          value="Afghanistan"
        >
          Afghanistan
        </option>
        <option
          value="Albania"
        >
          Albania
        </option>
        <option
          value="Algeria"
        >
          Algeria
        </option>
        <option
          value="Andorra"
        >
          Andorra
        </option>
        <option
          value="Angola"
        >
          Angola
        </option>
        <option
          value="Antigua and Barbuda"
        >
          Antigua and Barbuda
        </option>
        <option
          value="Argentina"
        >
          Argentina
        </option>
        <option
          value="Armenia"
        >
          Armenia
        </option>
        <option
          value="Aruba"
        >
          Aruba
        </option>
        <option
          value="Australia"
        >
          Australia
        </option>
        <option
          value="Austria"
        >
          Austria
        </option>
        <option
          value="Azerbaijan"
        >
          Azerbaijan
        </option>
      </select>
    </div>
    <div
      className="contact-form__field"
    >
      <label
        className="ui-label contact-form__field__label ui-label--medium"
      >
        Message
      </label>
      <textarea
        className="ui-textarea ui-textarea--medium"
        name="message"
        placeholder="Enter your message"
        rows="5"
      />
    </div>
    <div
      className="contact-form__actions"
    >
      <button
        className="ui-button ui-button--medium ui-button--default"
      >
        Send
      </button>
    </div>
  </form>
</div>
`;

exports[`Storyshots Examples/SearchField default 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "380px",
      "padding": "1rem",
    }
  }
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    aria-owns={null}
    className="search-field"
    role="combobox"
  >
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-0-label"
      autoComplete="off"
      className="ui-input search-field__input ui-input--large"
      id="downshift-0-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search for something"
      value=""
    />
    <i
      className="ui-icon search-field__icon search-field__icon--search ui-icon--large"
    >
      search
    </i>
  </div>
</div>
`;

exports[`Storyshots Examples/SearchField with predefined query 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "380px",
      "padding": "1rem",
    }
  }
>
  <div
    aria-expanded={true}
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    aria-owns="downshift-1-menu"
    className="search-field"
    role="combobox"
  >
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls="downshift-1-menu"
      aria-labelledby="downshift-1-label"
      autoComplete="off"
      className="ui-input search-field__input ui-input--large"
      id="downshift-1-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search for something"
      value=""
    />
    <i
      className="ui-icon search-field__icon search-field__icon--search ui-icon--large"
    >
      search
    </i>
    <div
      className="ui-dropdown search-field__results"
    >
      <ul
        className="ui-list-group ui-list-group--medium"
      >
        <li
          aria-selected={false}
          className="ui-list-group__item"
          id="downshift-1-item-0"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          role="option"
        >
          Kristine Mckenzie
        </li>
        <li
          aria-selected={false}
          className="ui-list-group__item"
          id="downshift-1-item-1"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          role="option"
        >
          Lottie Ramirez
        </li>
        <li
          aria-selected={false}
          className="ui-list-group__item"
          id="downshift-1-item-2"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          role="option"
        >
          Wendy Mitchell
        </li>
        <li
          aria-selected={false}
          className="ui-list-group__item"
          id="downshift-1-item-3"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          role="option"
        >
          Best Mcfarland
        </li>
        <li
          aria-selected={false}
          className="ui-list-group__item"
          id="downshift-1-item-4"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          role="option"
        >
          Barnes Solis
        </li>
        <li
          aria-selected={false}
          className="ui-list-group__item"
          id="downshift-1-item-5"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          role="option"
        >
          Kirkland Cook
        </li>
        <li
          aria-selected={false}
          className="ui-list-group__item"
          id="downshift-1-item-6"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          role="option"
        >
          Sharpe Townsend
        </li>
        <li
          aria-selected={false}
          className="ui-list-group__item"
          id="downshift-1-item-7"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          role="option"
        >
          Marcie Adkins
        </li>
      </ul>
    </div>
  </div>
</div>
`;
